<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SchoolinfoAPP</string>
    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>
    <string name="substitutionplan_change">Substitution schedule change</string>
    <string name="the_sp_has_changed">The substitution schedule did change</string>
    <string name="affected_lessons">Affected lessons:</string>
    <string name="no_entries_in_substitutionplan">No entries in schedule</string>
    <string name="special_messages">Special messages</string>
    <string name="no_filter_applied">No filter applied</string>
    <string name="mainfilter_mode">Mode</string>
    <string name="mainfilter_content">Filter</string>
    <string name="value">Value</string>
    <string name="helptext">The Main filter ensures that the right substitution schedule is displayed for the specified class or specified teacher in the overview.\n\nThe Subject/Course filters are used to enter subjects/courses that you do not want to see in the overview, for example French or Latin.</string>
    <string name="settings">Settings</string>
    <string name="check_connection_and_repeat">Check internet connection and repeat</string>
    <string name="again">Try again</string>
    <string name="login_required">Login required!</string>
    <string name="do_login">Login</string>
    <string name="login">Login</string>
    <string name="do_login_submit">Log In</string>
    <string name="username_or_password_wrong">Username or password incorrect</string>
    <string name="could_not_contact_logon_server">Could not contact logon server</string>
    <string name="unknown_error_at_logon">Unknown error occurred while trying to logon</string>
    <string name="abort">Cancel</string>
    <string name="overview">Overview</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="lesson">Lesson</string>
    <string name="substitute">Substitute</string>
    <string name="shift">Shift</string>
    <string name="exam">Exam</string>
    <string name="supervision">Supervision</string>
    <string name="lunch">Lunch</string>
    <string name="task_through">Task by</string>
    <string name="canceled">Canceled</string>
    <string name="shifted_to_today">Shifted to</string>
    <string name="shifted_to">Shifted to</string>
    <string name="autonomous_work">Self depentent work</string>
    <string name="instead_of">Instead of</string>
    <string name="elemination">Canceled</string>
    <string name="logout_successfull">Logout successful</string>
    <string name="logout_error">Logout error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="substitutionplan">Substitution schedule</string>
    <string name="news">News</string>
    <string name="cafeteria">Cafeteria</string>
    <string name="close">Close</string>
    <string name="touch_to_update">Touch to update</string>
    <string name="not_available_in_debug_mode">Not available in debug mode</string>
    <string name="update_available">Update available</string>
    <string name="should_the_app_be_updated">Update SchoolinfoAPP?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_new_version_available">Everthing up to date</string>
    <string name="logout">Logout</string>
    <string name="logout_realy">Are you sure that you want to logout?</string>
    <string name="logout_on_all_devices">Logout on all devices</string>
    <string name="youre_not_logged_in">You are not logged in</string>
    <string name="touch_to_logout">Touch to logout</string>
    <string name="school_settings">School settings</string>
    <string name="school">School</string>
    <string name="schoolclass">Class</string>
    <string name="username">Username</string>
    <string name="general">General</string>
    <string name="show_notifications">Show notifications</string>
    <string name="notify_if_youre_class_is_affected">Notify if my class is affected</string>
    <string name="automatic_updates">Automatically update</string>
    <string name="only_update_over_wireless_lan">Only update over wireless LAN</string>
    <string name="information">Information</string>
    <string name="developer">Developers</string>
    <string name="information_about_the_developers_of_this_app">Information about the developers</string>
    <string name="github">GitHub</string>
    <string name="license">License</string>
    <string name="build_version">Build version</string>
    <string name="deny_substitutionplan_updates">Deny automatic substitution schedule updates</string>
    <string name="update_everytime">Update always</string>
    <string name="as_of">From</string>
    <string name="refresh">Refresh</string>
    <string name="filter">Filter</string>
    <string name="filters">Subject filters</string>
    <string name="teacher">Teacher</string>
    <string name="subject_course">Subject</string>
    <string name="invalid_filter">Invalid filter</string>
    <string name="add">Add</string>
    <string name="add_filter">Add filter</string>
    <string name="edit_filter">Edit filter</string>
    <string name="all">All</string>
    <string name="filters_active">%d filters active</string>
    <string name="filter_active">1 filter active</string>
    <string name="no_filter_active">No filter active</string>
    <string name="helpdesk">Helpdesk</string>
    <string name="contact_us_if_you_have_a_problem_with_this_app">Contact us, if you have a problem or enhancement for this app</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="email_subject">Subject</string>
    <string name="message">Message</string>
    <string name="message_sent_successfully">Message sent successfully</string>
    <string name="please_fill_out_all_inputs">Please fill out all inputs</string>
    <string name="error_while_sending_message">Error while sending message</string>
    <string name="ok">OK</string>
    <string name="mainfilter">Main filter</string>
    <string name="set_main_filter">Set Main filter</string>
    <string name="set_mainfilter_mode">Set mode</string>
    <string name="not_selected">Not selected</string>
    <string name="autoupdate">Check for app updates</string>
    <string name="autoupdate_summary">Notify if new version is available</string>
    <string name="infoappupdate">SchoolinfoAPP update</string>
    <string name="appupdate_available">An update for the SchoolinfoAPP is available</string>
    <string name="read">Read</string>
    <string name="nothing">Nothing</string>
    <string name="help">Help</string>
    <string name="password">Password</string>
    <string name="vegi">Vegi</string>
    <string name="garnish">Garnish</string>
    <string name="exams">Exams</string>
    <string name="firstuse">First use</string>
    <string name="my_exams">My exams</string>
    <string name="all_exams">All exams</string>
    <string name="maths">Mathematics</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="physics">Physics</string>
    <string name="history">History</string>
    <string name="geo">Geography</string>
    <string name="latin">Latin</string>
    <string name="chem">Chemistry</string>
    <string name="compsc">Computer science</string>
    <string name="phil">Philosophy</string>
    <string name="lhour">Lesson</string>
    <string name="religion">Religion</string>
    <string name="next">Next</string>
    <string name="setup_title_1">Welcome to the SchoolinfoAPP!</string>
    <string name="setup_description">Welcome to the SchoolinfoAPP!</string>

</resources>
